Extend JAR manifest